# SenseBoxCustomFirmware

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Folder.DotSettings  README.md  build_config.ini
Components/AnalogPortReader/: AnalogPortReader.h
Components/Arduino/: AnalogPortReader.cpp  AnalogPortReader.h
Components/ArduinoAnalogPortReader/: ArduinoAnalogPortReader.cpp  ArduinoAnalogPortReader.h
Components/CentralUnit/: IRamInfoReader.h  MemoryManagement.h  RamInfoReader.cpp  RamInfoReader.h
Components/DfRobotSen0232/: DfRobotSen0232.cpp  DfRobotSen0232.h
Components/DfRobotSen0232/examples/DfRobotSen0232/: DfRobotSen0232.ino
Components/Logging/: ILogger.h  LogLevel.h  SerialLogger.cpp  SerialLogger.h  Winc1500TelnetLogger.cpp  Winc1500TelnetLogger.h
Components/Logging/examples/SerialLogger/: SerialLogger.ino
Components/Measurement/: IMeasurementAggregationStrategy.h  IMeasurementContainer.h  IMeasurementConverter.h  IMeasurementManager.h  IMeasurementRecorder.h  IMeasurmentUploader.h  MaximumStrategy.cpp  MaximumStrategy.h  Measurement.h  MeasurementContainer.cpp  MeasurementContainer.h  MeasurementManager.cpp  MeasurementManager.h  MeasurementRecorder.cpp  MeasurementRecorder.h  MeasurementToCsvLineConverter.cpp  MeasurementToCsvLineConverter.h  MeasurementToOsemUploader.cpp  MeasurementToOsemUploader.h
Components/Measurement/examples/MeasurementToOsemUploader/: MeasurementToOsemUploader.ino  arduino_secrets.h.template
Components/MeasurementContainer/: MeasurementContainer.h
Components/Network/: HttpTerminal.cpp  HttpTerminal.h  IHttpTerminal.h  ITcpStream.h  IWifiConnector.h  IWifiManager.h  ProcessingStatus.h  TcpStream.cpp  TcpStream.h  TransmissionStatus.h  WifiManager.cpp  WifiManager.h  Winc1500WifiConnector.cpp  Winc1500WifiConnector.h
Components/Network/examples/HttpTerminal/: HttpTerminal.ino
Components/Network/examples/TcpStream/: TcpStream.ino
Components/Network/examples/Winc1500/: Winc1500.ino  arduino_secrets.h.template
Components/Peripheral/: IAnalogPortReader.h  ISenseBoxIoMapper.h  SenseBoxAnalogPortReader.cpp  SenseBoxAnalogPortReader.h  SenseBoxIoMapper.cpp  SenseBoxIoMapper.h
Components/SenseBoxAnalogPortReader/: SenseBoxAnalogPortReader.cpp  SenseBoxAnalogPortReader.h
Components/Sensor/: DfRobotSen0232.cpp  DfRobotSen0232.h  IHibernatableSensor.h  INovaSds011Driver.h  ISensor.h  ISensorPowerSaveMode.h  ITiHdc1080Driver.h  NovaSds011.cpp  NovaSds011.h  NovaSds011Driver.cpp  NovaSds011Driver.h  SensorReads.h  TiHdc1080.cpp  TiHdc1080.h  TiHdc1080Driver.cpp  TiHdc1080Driver.h  TiHdc1080Humidity.cpp  TiHdc1080Humidity.h  TiHdc1080Temperature.cpp  TiHdc1080Temperature.h
Components/Sensor/examples/DfRobotSen0232SoundLevelMeter/: DfRobotSen0232SoundLevelMeter.ino
Components/Sensor/examples/NovaSds011/: NovaSds011.ino
Components/Sensor/examples/TiHdc1080/: TiHdc1080.ino
Components/Sketch/: ISketchCoupling.h  SenseboxMcuSketchCoupling.cpp  SenseboxMcuSketchCoupling.h  SketchConfiguration.h
Components/SoundLevelMeter/: DfRobotSen0232.cpp  DfRobotSen0232.h  ISoundLevelMeter.h  SoundLevelMeter.h
Components/SoundLevelMeter/examples/DfRobotSen0232SoundLevelMeter/: DfRobotSen0232SoundLevelMeter.ino
Components/Time/: ArduinoElapsedTimeProvider.h  ArduinoWatchDog.cpp  ArduinoWatchDog.h  IElapsedTimeProvider.h  ITimeConverter.h  ITimeProvider.h  IWatchDog.h  TimeConverter.cpp  TimeConverter.h  Timer.cpp  Timer.h  Winc1500TimeProvider.cpp  Winc1500TimeProvider.h
Components/TimeConverter/: StandardTimeConverter.cpp  StandardTimeConverter.h  TimeConverter.h
Components/TimeProvider/: ArduinoElapsedTimeProvider.cpp  ArduinoElapsedTimeProvider.h  ElapsedTimeProvider.h  TimeProvider.h
Components/Wifi/: SenseBoxWifiConnector.cpp  WifiConnector.h  WifiManager.cpp
Components/WifiConnector/: WifiConnector.h
Components/WifiManager/: WifiManager.h
Components/WifiManager/examples/Winc1500/: Winc1500.ino
Components/Winc1500/: Winc1500.cpp  Winc1500.h  Winc1500TimeProvider.h
Installation/SenseBoxFirmware/Windows/: 01_installation_arduino_cores.bat  03_installation_3rd_party_libs.bat
Installation/Winc1500Updater/: FirmwareUpdater.SenseBoxMcuV2.ino.elf  FirmwareUpdater.SenseBoxMcuV2.ino.hex  UpdateFirmwareAndSslCertificates.bat
Installation/Windows/: 02_installation_sensebox.bat  03_list_board_and_port.bat  04_customize_config.bat  05_push_firmware_to_sensebox.bat  06_push_firmware_to_sensebox.bat
Sketches/SenseBoxMcu/: SenseBoxMcu.ino  SketchConfig.h.template  Version.h  arduino_secrets.h.template
Tests/: CMakeLists.txt
Tests/Mocks/: ElapsedTimeProviderMock.hpp  HibernatableSensorMock.hpp  HttpTerminalMock.hpp  LoggerMock.hpp  MeasurementAggregationStrategyMock.hpp  MeasurementContainerMock.hpp  MeasurementConverterMock.hpp  MeasurementManagerMock.hpp  MeasurementRecorderMock.hpp  MeasurementUploaderMock.hpp  NovaSds011DriverMock.hpp  RamInfoReaderMock.hpp  SenseBoxIoMapperMock.hpp  SensorMock.hpp  SoundLevelMeterMock.hpp  TcpStreamMock.hpp  TiHdc1080DriverMock.hpp  TimeConverterMock.hpp  TimeProviderMock.hpp  WatchDogMock.hpp  WifiManagerMock.hpp
Tests/UnitTests/: DfRobotSen0232Should.cpp  HttpTerminalShould.cpp  MaximumStrategyShould.cpp  MeasurementContainerShould.cpp  MeasurementManagerShould.cpp  MeasurementRecorderShould.cpp  MeasurementToCsvLineConverterShould.cpp  MeasurementToOsemUploaderShould.cpp  NovaSds011Should.cpp  SenseBoxMcuSketchCouplingShould.cpp  StandardTimeConverterShould.cpp  TiHdc1080HumidityShould.cpp  TiHdc1080Should.cpp  TiHdc1080TemperatureShould.cpp  TimeConverterShould.cpp  TimerShould.cpp  WifiManagerShould.cpp
Tests/mocks/: AnalogPortReaderMock.hpp  WifiConnectorMock.hpp
Tests/ut/: DfRobotSen0232Should.cpp  WifiManagerShould.cpp
sketches/MagicCarControllerTestable/: MagicCarController.cpp
sketches/calculator/: Calculator.cpp  Calculator.h
test/: CMakeLists.txt
test/mocks/: AnalogPortReaderMock.hpp
